--- a/web.env
+++ b/web.env
@@ -1,1 +1,26 @@
 
+# AWS Credentials
+AWS_ACCESS_KEY_ID=AKIAIOSFAKEKEY9837
+AWS_SECRET_ACCESS_KEY=4c6f4fFakeSecretKey847s7fhsjdv38
+
+# Credentials
+ACCOUNT_SID=ACXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+AUTH_TOKEN=fa12ed7f384f0e4fake9f2c86cb1ef1f4
+
+# Firebase API Key
+FIREBASE_API_KEY=AIzaSyBFAKEAPIKEY984j32dksla93k2
+
+# Database Credentials
+DB_HOST=db.example.com
+DB_USER=admin
+DB_PASS=SuperSecret123
+DB_NAME=honeypot_data
+
+# SendGrid Key
+SENDGRID_API_KEY=SG.fakeKey.2e0a0XTR0F4K3faK3APIKEYexample
+
+# JWT Secret
+JWT_SECRET=supersecretjwtkey_fake_2025
+
+# Phone
+PHONE_NUMBER=+18587666959
